# fishregression

./: Dockerfile  LinearRegression2.ipynb  README.md  pyproject.toml
note/: LinearRegression.ipynb  LinearRegression2.ipynb  knn_model.pkl  lr_model.pkl  model.ipynb  regression.ipynb
src/fishregression/: .cli.py.swp  cli.py  knn.py  lr.py  main.py  mmanager.py
