[project]
name = "fishregression"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Seokxkyu", email = "kyuseok000@gmail.com"},
]
dependencies = [
	"fastapi>=0.112.2",
	"scikit-learn>=1.5.1"
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
tests = [
    "pytest>=8.3.2",
]
