[project]
name = "fishregression"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "Seokxkyu", email = "kyuseok000@gmail.com"},
]
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6",
    "scikit-learn>=1.5.1",
]

requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.9.2",
]
tests = [
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
pythonpath = ["src/", "."]

[project.scripts]
pp = 'fishregression.cli:predict'
